# rust-wasm-calc

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TASKS.md  TASKS_REFACTOR.md  custom.css  index.html  package.json  repomix-output.txt  run_tests.js  server.js
js/: api.js  calculator.js  chatbot.js  navigation.js
js/calculator/: controller.js  display.js  events.js  memory.js
lessons/: enhanced-tutorial-series.md  tutorial-series.md
local-research/: rust-wasm-best-practices.md  rust-wasm-tdd.md  rust-wasm-testing.md
src/: errors.rs  lib.rs  state.rs
src/calculator/: memory.rs  mod.rs  operations.rs
src/state/: mod.rs  operations.rs  types.rs
tests/: llm_function_tests.js  web.rs
tests/calculator/: memory_tests.rs  operations_tests.rs
tests/state/: mod.rs  operations_tests.rs  types_tests.rs
